# connect-iphone-cam-to-windows

./: .gitignore  Package.swift  README.md  WORKSTATE.md
.github/workflows/: build.yml
benchmarks/: protocol_bench.c
docs/: BACKDOOR.md  QUICKSTART.md  architecture.md
ios/: AppDelegate.swift  CameraStreamer.swift  Info.plist  StreamSender.swift
ios/iPhoneCameraStream.xcodeproj/: project.pbxproj
protocol/: stream_protocol.h
scripts/: build_ios.sh  build_windows.sh
shared/: BackgroundStage.swift  StreamHeader.swift
tests/: CaptureTests.swift  DecoderTests.swift  EncoderTests.swift  TransportTests.swift  protocol_test.c
tests/swift/: BackgroundStageTests.swift  CaptureTests.swift  EncoderTests.swift  ObsTests.swift  ProtocolTests.swift  VisionTests.swift
windows/: CMakeLists.txt  receiver.cpp  sal_shim.h  vcpkg.json  virtual_camera.cpp
